# NF_itens_SEFAZ_AM

./: .gitignore  README.md  pyproject.toml
src/: getItens.py
src/modules/: popUpImg.py
